# FreeSpaceOhYeah

./: .gitignore  CMakeLists.txt  README.md
include/fsoy/: gpu_plugin.h
src/: gpu_loader.cpp  gpu_loader.h  main.cpp  sha256.cpp  sha256.h
src/plugins/: nvidia_gpu.cpp  nvidia_gpu.cu
